# trpc-gateway-platform

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
benchmark/: collect_metrics_snapshot.sh  hey_health.sh  hey_profile.sh  metrics_snapshot.txt  run_all.sh  run_release_benchmark.sh  verify_governance.sh  verify_rate_limit.sh  wrk_profile.lua  wrk_profile.sh
configs/: gateway.yaml
deploy/: docker-compose.yml
deploy/grafana/dashboards/: tgw-gateway.json
deploy/grafana/provisioning/dashboards/: tgw-dashboard.yml
deploy/mysql/: init.sql
deploy/prometheus/: prometheus.yml
docs/: deploy_observability.md  final_project_summary.md  performance_report.md  resume_interview_guide.md
include/tgw/admin/: admin_handler.h
include/tgw/auth/: auth_filter.h  token_service.h
include/tgw/common/: config.cc  config.h  deadline.h  logger.cc  logger.h  status.h
include/tgw/gateway/: forward_context.h  gateway_handler.h  http_server.h  http_types.h  local_rpc_upstream_client.h  route_rule.h  router.h  upstream_client.h
include/tgw/governance/: governance_upstream_client.h  rate_limit_filter.h
include/tgw/observability/: metrics.h  tracing.h
include/tgw/rpc/: rpc_context.h
include/tgw/service/: file_meta_service.h  remote_user_service_client.h  task_service.h  user_repository.h  user_service.h
proto/: common.proto  file_meta.proto  task.proto  user.proto
run_results/: README.md  collect_metrics_snapshot.txt  hey_health.txt  hey_health_1000_20.txt  hey_health_5000_50.txt  hey_profile_80_10.txt  hey_profile_with_rate_limit.txt  metrics_after_verify.txt  release_health_check.json  release_hey_health_10000_100.txt  release_hey_profile_1000_50.txt  release_login.txt  release_metrics_after_benchmark.txt  release_summary.md  release_traces_after_benchmark.json  traces_after_benchmark.json  traces_after_verify.json  verify_governance.txt  verify_rate_limit.txt
scripts/: docker_smoke_test.sh
src/: main.cc
src/admin/: admin_handler.cc
src/auth/: auth_filter.cc  token_service.cc
src/common/: config.cc  logger.cc
src/gateway/: gateway_handler.cc  http_server.cc  local_rpc_upstream_client.cc  route_rule.cc  router.cc  upstream_client.cc
src/governance/: governance_upstream_client.cc  rate_limit_filter.cc
src/observability/: metrics.cc  tracing.cc
src/rpc/: rpc_demo.cc
src/service/: file_meta_service.cc  remote_user_service_client.cc  task_service.cc  user_repository.cc  user_service.cc  user_service_server_main.cc
tests/: auth_filter_test.cc  token_service_test.cc
